# AugmentedQuill

./: .commit_msg  .editorconfig  .eslintrc.js  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  SECURITY.md  build_backend.py  docker-compose.yml  openapi.json  package.json  pyproject.toml  requirements.txt  run_app.py  smartQuotes.ts  test_marked.js  tools.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-docker.yml  build-electron.yml  build-pyinstaller.yml  code-quality.yml  codeql-analysis.yml  create-release.yml  dependency-review.yml
.junie/: guidelines.md
app/: __init__.py  config.py  llm.py  llm_shims.py  main.py  projects.py  prompts.py  prompts_defaults.json
app/api/: __init__.py  chapters.py  chat.py  debug.py  projects.py  settings.py  sourcebook.py  story.py
app/core/: __init__.py  config.py  prompts.py  prompts_defaults.json
app/helpers/: __init__.py  chapter_helpers.py  chat_api_helpers.py  chat_tool_dispatcher.py  chat_tools_schema.py  image_helpers.py  llm_logging.py  llm_request_helpers.py  llm_utils.py  project_helpers.py  projects_api_asset_ops.py  projects_api_manage_ops.py  settings_api_ops.py  settings_machine_ops.py  settings_update_ops.py  sourcebook_helpers.py  story_helpers.py  stream_helpers.py
app/models/: __init__.py  projects.py
app/services/: __init__.py
app/updates/: update_v1_to_v2.py
app/utils/: __init__.py  image_helpers.py  llm_parsing.py  llm_utils.py  stream_helpers.py
config/: projects.json
config/examples/: machine.json  story.json
docs/: ARCHITECTURE.md  ORGANIZATION.md
docs/user_manual/: 01_getting_started.md  02_projects_and_settings.md  03_writing_interface.md  04_chapters_and_books.md  index.md  (+15 more)
electron/: afterPack.js  main.js  package.json
frontend/: .prettierrc.json  App.tsx  eslint.config.cjs  index.html  index.tsx  metadata.json  package-lock.json  package.json  test_marked.js  types.ts  vite.config.ts
schemas/: README.md
static/: style.css
templates/: base.html  index.html  settings.html
tests/: conftest.py
tools/: debug_search.py  enforce_code_hygiene.py  export_openapi.py  generate_tools_json.py  test_accept_continuation.js  verify_chat_tools.py
(+647 files in other folders)
