[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AugmentedQuill"
version = "0.1.0"
description = "Web GUI for LLM assisted prose writing"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "StableLlama"},
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
augmentedquill = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501", "S101", "S104", "COM812", "ISC001"]
per-file-ignores = {"tests/**/*" = ["S101", "ARG", "FBT", "PLR2004"]}